# controllers/user.go
@@ -1,17 +1,17 @@
 package controllers
 
 import (
-	"battleship/battle_error"
 	"battleship/dto"
 	"battleship/service"
+	"battleship/utils"
 	"github.com/labstack/echo/v4"
 	"github.com/rs/zerolog/log"
 	"net/http"
 )
 
 type UserController interface {
-	CreateUser() func(ctx echo.Context) error
-	GetUser() func(ctx echo.Context) error
+	CreateUser(ctx echo.Context) error
+	GetUser(ctx echo.Context) error
 }
 
 type UserControllerImpl struct {
@@ -33,22 +33,19 @@ func NewUserController(userService service.UserService) *UserControllerImpl {
 // @Param request body dto.CreateUserRequest true "Create User Request"
 // @Success 200 {object} dto.CreateUserResponse "User successfully created"
 // @Router /api/v1/user [post]
-func (r *UserControllerImpl) CreateUser() func(ctx echo.Context) error {
-	return func(ctx echo.Context) error {
-		request := new(dto.CreateUserRequest)
-		if err := ctx.Bind(request); err != nil {
-			log.Warn().Err(err).Msg("Bad request")
-			return battle_error.BadRequest1(err.Error())
-		}
-
-		res, err := r.userService.CreateUser(*request)
-		if err != nil {
-			log.Info().Err(err).Msg("cannot create user")
-			return err
-		}
-
-		return ctx.JSON(http.StatusOK, res)
+func (r *UserControllerImpl) CreateUser(ctx echo.Context) error {
+	request := new(dto.CreateUserRequest)
+	if err := ctx.Bind(request); err != nil {
+		log.Warn().Err(err).Msg("Bad request")
+		return dto.BadRequest1(err.Error())
 	}
+
+	res, err := r.userService.CreateUser(*request)
+	if err != nil {
+		log.Info().Err(err).Msg("cannot create user")
+		return err
+	}
+	return ctx.JSON(http.StatusOK, res)
 }
 
 // Get user
@@ -60,19 +57,17 @@ func (r *UserControllerImpl) CreateUser() func(ctx echo.Context) error {
 // @Param user_id path string true " "
 // @Success 200 {object} dto.UserDto "Game successfully created"
 // @Router /api/v1/user/{user_id} [get]
-func (r *UserControllerImpl) GetUser() func(ctx echo.Context) error {
-	return func(ctx echo.Context) error {
-		userId := ctx.Param("user_id")
-		if userId == "" {
-			log.Warn().Msg("Bad request")
-			return battle_error.BadRequest1("userId must has value")
-		}
-
-		user, err := r.userService.GetUser(userId)
-		if err != nil {
-			log.Info().Str("userId", userId).Err(err).Msg("cannot get user")
-			return err
-		}
-		return ctx.JSON(http.StatusOK, user)
+func (r *UserControllerImpl) GetUser(ctx echo.Context) error {
+	userId := ctx.Param("user_id")
+	if userId == "" {
+		log.Warn().Msg("Bad request")
+		return dto.BadRequest1("userId must has value")
 	}
+
+	user, err := r.userService.GetUser(utils.MaskId(userId))
+	if err != nil {
+		log.Info().Str("userId", utils.MaskId(userId)).Err(err).Msg("cannot get user")
+		return err
+	}
+	return ctx.JSON(http.StatusOK, user)
 }
